08. Oct 2011 Christoph Thielecke <crissi99@gmx.de>
	- reenabling some export options after switching back from xml to csv or html fixed
	- french translation updated (thanks to Josselin du PLESSIS)
	- set media name from cd/dvd only if selected or at scan time

12. Sep 2011 Christoph Thielecke <crissi99@gmx.de>
	- path name for archive file at gtktalog xml import fixed
	- import archive files with subfolders at gtktalog xml import fixed
	- print search result added
	- export search result as html added

11. Sep 2011 Christoph Thielecke <crissi99@gmx.de>
	- gtktalog xml import fixed
	- archivecontent is now imported at gtktalog xml import

14. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- position of filelist extensions and max size for filecontent corrected 

11. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- version changed to 1.5
	- compile info updated (mediainfo)

10. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- reset archivecontent after adding archive file to db
	- comment widget optimizions

09. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- mediainfo for getting additional info about file types added
	- tbyte unit type added
	- size detection fixed
	- adding history entry name at saveas event fixed 

07. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- display 7zip lib found state in selreadable dialog added

05. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- translations from old qt3 version readded: fr, it, sr (unmaintained)
	- track number in mp3tag is now supported
	- archive scan options moved from config dialog to selreadable dialog

04. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- comment widget now expands if the text inside is larger than viewport 
	- archive scanning added (needs libtar, libbzip2, lib7zip)
	- recent catalog menu reversed (last used now on top)
	- config dialog size optimizions

22. Jun 2011 Christoph Thielecke <crissi99@gmx.de>
	- crash at adding cdcat link fixed
